Person Form Work on Image

--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -38,3 +38,4 @@ parameters:
         numbers: 1
         mixedCase: 1
         specials: 0
+    upload_path: '../web/uploads/%current_year%/%current_month%'
