--- a/src/Busybee/PersonBundle/Resources/config/doctrine/Person.orm.yml
+++ b/src/Busybee/PersonBundle/Resources/config/doctrine/Person.orm.yml
@@ -42,6 +42,7 @@ Busybee\PersonBundle\Entity\Person:
         website:
             type: string
             length: '150'
+            nullable: true
         address1:
             type: integer
             nullable: true
@@ -57,7 +58,6 @@ Busybee\PersonBundle\Entity\Person:
     properties:
         email:
             - Email: ~
-            - Unique: ~
         email2:
             - Email: ~
         website:
@@ -65,6 +65,14 @@ Busybee\PersonBundle\Entity\Person:
         gender:
             - Choice: 
                 choices: { callback: getGenders }
+        photo:
+            - Image:
+                maxSize: 100k
+                minWidth: '350'
+                maxWidth: '450'
+                minHeight: '400'
+                maxHeight: '500'
+                allowPortrait: false
     manyToOne:
         createdBy:
             targetEntity: Busybee\SecurityBundle\Entity\User
@@ -78,3 +86,7 @@ Busybee\PersonBundle\Entity\Person:
                 modified_by:
                     referencedColumnName: id
                     nullable: true
+    oneToOne:
+        photo:
+            targetEntity: Busybee\PersonBundle\Entity\Image
+            cascade: ['persist']
