--- a/src/Busybee/PersonBundle/Resources/config/doctrine/Person.orm.yml
+++ b/src/Busybee/PersonBundle/Resources/config/doctrine/Person.orm.yml
@@ -49,6 +49,10 @@ Busybee\PersonBundle\Entity\Person:
         address2:
             type: integer
             nullable: true
+        photo:
+            type: string
+            length: '150'
+            nullable: true
         lastModified:
             type: datetime
             nullable: true 
@@ -60,6 +64,8 @@ Busybee\PersonBundle\Entity\Person:
             - Email: ~
         email2:
             - Email: ~
+        surname:
+            - NotBlank: ~
         website:
             - Url: ~
         gender:
@@ -67,12 +73,14 @@ Busybee\PersonBundle\Entity\Person:
                 choices: { callback: getGenders }
         photo:
             - Image:
-                maxSize: 100k
+                maxSize: 200k
                 minWidth: '350'
                 maxWidth: '450'
                 minHeight: '400'
                 maxHeight: '500'
                 allowPortrait: false
+                minRatio: '0.8'
+                maxRatio: '0.9'
     manyToOne:
         createdBy:
             targetEntity: Busybee\SecurityBundle\Entity\User
@@ -86,7 +94,3 @@ Busybee\PersonBundle\Entity\Person:
                 modified_by:
                     referencedColumnName: id
                     nullable: true
-    oneToOne:
-        photo:
-            targetEntity: Busybee\PersonBundle\Entity\Image
-            cascade: ['persist']
