Added Phone Numbers to Person

--- a/src/Busybee/PersonBundle/Resources/config/doctrine/Person.orm.yml
+++ b/src/Busybee/PersonBundle/Resources/config/doctrine/Person.orm.yml
@@ -95,6 +95,7 @@ Busybee\PersonBundle\Entity\Person:
     manyToMany:
         phone:
             targetEntity: Busybee\PersonBundle\Entity\Phone
+            cascade: [ 'persist' ]
             joinTable:
                 name: person_phone
                 joinColumns:
