--- a/src/Busybee/PersonBundle/Resources/config/doctrine/Phone.orm.yml
+++ b/src/Busybee/PersonBundle/Resources/config/doctrine/Phone.orm.yml
@@ -15,15 +15,14 @@ Busybee\PersonBundle\Entity\Phone:
         phoneNumber:
             type: string
             length: '20'
+            unique: true
         countryCode:
             type: string
             length: '6'
         lastModified:
             type: datetime
-            nullable: true 
         createdOn:
             type: datetime
-            nullable: true 
     manyToOne:
         createdBy:
             targetEntity: Busybee\SecurityBundle\Entity\User
