--- a/src/Busybee/PersonBundle/Resources/config/doctrine/Phone.orm.yml
+++ b/src/Busybee/PersonBundle/Resources/config/doctrine/Phone.orm.yml
@@ -34,3 +34,7 @@ Busybee\PersonBundle\Entity\Phone:
             joinColumns:
                 modified_by:
                     referencedColumnName: id
+    properties:
+        phoneNumber:
+            - Busybee\PersonBundle\Validator\Phone: 
+                - groups: person_form
