Changes for AVETMISS Plugin

--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -13,3 +13,7 @@ busybee_person:
 busybee_system:
     resource: "@SystemBundle/Resources/config/routing.yml"
     prefix:   /system/
+
+busybee_avetmiss:
+    resource: "@BusybeeAVETMISSBundle/Resources/config/routing.yml"
+    prefix:   /avetmiss/
