Changes implemented in Core for AVETMISS NAT00030

--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -18,6 +18,11 @@ busybee_campus:
     resource: "@BusybeeCampusBundle/Resources/config/routing.yml"
     prefix:   /campus/
 
+busybee_program:
+    resource: "@BusybeeProgramBundle/Resources/config/routing.yml"
+    prefix:   /program/
+
 busybee_avetmiss:
     resource: "@BusybeeAVETMISSBundle/Resources/config/routing.yml"
     prefix:   /avetmiss/
+
