NAT00080, Setting Import

--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -22,7 +22,7 @@ busybee_curriculum:
     resource: "@BusybeeCurriculumBundle/Resources/config/routing.yml"
     prefix:   /curriculum/
 
-busybee_avetmiss:
-    resource: "@BusybeeAVETMISSBundle/Resources/config/routing.yml"
-    prefix:   /avetmiss/
+#busybee_avetmiss:
+#    resource: "@BusybeeAVETMISSBundle/Resources/config/routing.yml"
+#    prefix:   /avetmiss/
 
