--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -4,3 +4,7 @@ parameters:
 #    parameter_name: value
 
 services:
+    kernel.listener.your_pdo_listener:
+        class: Busybee\SystemBundle\EventListener\PDOConnectionListener
+        tags:
+           - { name: kernel.event_listener, event: kernel.exception, method: onPdoException }
