--- a/src/Busybee/SystemBundle/Resources/config/routing.yml
+++ b/src/Busybee/SystemBundle/Resources/config/routing.yml
@@ -29,12 +29,17 @@ update_database:
     path:     /update/database/
     defaults: { _controller: SystemBundle:Update:database }
 setting_manage:
-    path:     /setting/manage
+    path:     /setting/manage/
     defaults: { _controller: SystemBundle:Setting:index }
+setting_upload:
+    path:     /setting/upload/
+    defaults: { _controller: SystemBundle:Setting:upload }
 setting_edit:
     path:     /setting/edit/{id}
     defaults: { _controller: SystemBundle:Setting:edit }
 setting_edit_name:
     path:     /setting/editName/{name}
     defaults: { _controller: SystemBundle:Setting:editName }
-
+plugin_manage:
+    path:     /plugin/manage/
+    defaults: { _controller: SystemBundle:Plugin:manager }
